--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Deploy
       run: |
         npm install
+        npm i -g pm2
         pm2 stop 0
         pm2 start 0
         pm2 save
